--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,10 @@
     transform: rotate(360deg);
   }
 }
+
+.bottomPush {
+  position: "fixed";
+  bottom: 0;
+  text-align: "center";
+  padding-bottom: 10;
+}
