--- a/src/index.css
+++ b/src/index.css
@@ -55,6 +55,11 @@ color: #006064;
   color: #006064;
 }
 
+.MuiRadio-colorSecondary{
+  color: aquamarine;
+}
+
+
 .MuiFormLabel-root{
   color: #006064;
 }
